
CONFIG:
	- Added packages file for Debian Jessie (testing)
	- Replaced package php5-mysql by php5-mysqlnd (native driver)
	- Removed php5-adodb package from distribution packages files
	- Updated Apache templates to support 2.4.x branch

SETUP:
	- i-MSCP apache_php_fpm server impl. is now the default choice for distributions supporting it officialy
	- Fixed: Do not ask for SQL user host names when the SQL server is hosted locally
	- Fixed: Plugins which provide a backend end with unknown error after update
	- Fixed: Pre-fill Debconf database (Avoid postfix, proftpd and courier questions during installation)

ENGINE:
	- Added support for Apache 2.4.x branch
	- Added database connection timeout (3 seconds)
	- Added MySQL transaction routines
	- Fixed: MySQL server has gone away
	- Fixed: Plugin module is broken: Unable to disable, uninstall... any plugin
	- Fixed: Plugin update must be triggered when plugin configuration is updated

GUI:
	- Added onBeforeDomainChangeStatus and onAfterDomainChangeStatus events
	- Fixed: Allow to share domain_dns table between several components (core, plugins..)
	- Fixed: Plugins must be able to short-circuit execution of an event
	- Fixed: Plugin update must be triggered when plugin configuration is updated
	- Fixed: Unable to delete plugin in some contexts
	- Fixed: Wrong placeholders in admin/imscp_debugger.php
	- Updated plugin API

Tickets:
	- Fixed #579: Review - i18n issues
	- Fixed #745: Defect - Disk detail in dovecot doesn't include aliases
	- Fixed #779: Defect - When migrating from ispcp the reseller and admin logos are lost
	- Fixed #791: Defect - Unable to change customer IP
	- Fixed #834: Cosmetics - Ticket system menu names
	- Fixed #835: Task - Migration script - ispCP - Remove old php5-fcgi-starter
	- Fixed #838: Bug - Installer skips PHP INI Level dialog for apache fcgi
	- Fixed #852: Bug - Software installer - Unable to install any software
	- Fixed #858: Task - Remove php5-adodb package